Fix some block overlap bugs in IE

--- a/public/stylesheets/tt.css
+++ b/public/stylesheets/tt.css
@@ -2031,7 +2031,6 @@ a.widget-collapsed {
 }
 
 .user-block { 
-  position: relative;
   margin: 1em 1em 1em 0;
   padding-bottom: 1em;
 }
@@ -2078,8 +2077,9 @@ a.widget-collapsed {
   width: 8em;
   text-align: right;
   padding-right: 0.5em;
-  color: #666;
+  color: #777;
 }
 
 .user-information-value { 
+  overflow: auto;
 }
